# RepairRequests

./: .env.example  .gitignore  DECISIONS.md  PROMPTS.md  README.md  docker-compose.prod.yml  docker-compose.yml
.cursor/: rules.md
.github/workflows/: workflow.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_request_audit_events.py  001_add_users_and_repair_requests.py
backend/app/: main.py  seed.py
backend/app/api/routers/: auth.py  requests_dispatcher.py  requests_master.py  requests_public.py  users.py
backend/app/core/: errors.py  security.py  settings.py
backend/app/db/: __init__.py  engine.py  session.py
backend/app/models/: __init__.py  audit.py  request.py  user.py
backend/app/repositories/: __init__.py  audit.py  requests.py  users.py
backend/app/schemas/: __init__.py  auth.py  requests.py  users.py
backend/app/services/: __init__.py  auth.py  requests.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ErrorBanner.tsx
frontend/src/hooks/: useCurrentUser.ts
frontend/src/pages/: DispatcherDashboard.tsx  Login.tsx  MasterDashboard.tsx  PublicCreateRequest.tsx
frontend/src/styles/: theme.css
scripts/: check.sh  commit_checked.sh  race_test.ps1  race_test.sh
